--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,32 @@
-Babel==1.3
-Flask==0.10.1
-Flask-Babel==0.9
-Flask-Login==0.2.11
+Babel==2.3.4
+blinker==1.4
+click==6.6
+coverage==4.2
+decorator==4.0.10
+defusedxml==0.4.1
+Flask==0.11.1
+Flask-Babel==0.11.1
+Flask-Login==0.3.2
 Flask-Mail==0.9.1
-Flask-OpenID==1.2.4
-Flask-SQLAlchemy==2.0
-Flask-WTF==0.11
+Flask-OpenID==1.2.5
+Flask-SQLAlchemy==2.1
 Flask-WhooshAlchemy==0.56
-Jinja2==2.7.3
-MarkupSafe==0.23
-SQLAlchemy==0.9.9
-Tempita==0.5.3dev
-WTForms==2.0.2
-Werkzeug==0.10.4
-Whoosh==2.7.0
-argparse==1.2.1
-blinker==1.3
-coverage==4.0a5
-decorator==3.4.2
-distribute==0.6.24
+Flask-WTF==0.12
 flipflop==1.0
 guess-language==0.2
 itsdangerous==0.24
-pbr==0.11.0
-python-openid==2.2.5
-pytz==2015.4
-six==1.9.0
-speaklater==1.3
-sqlalchemy-migrate==0.9.6
-sqlparse==0.1.15
-uWSGI==2.0.11.1
-wsgiref==0.1.2
+Jinja2==2.8
+MarkupSafe==0.23
+pbr==1.10.0
+python3-openid==3.0.10
+pytz==2016.6.1
+six==1.10.0
+SQLAlchemy==1.0.14
+sqlalchemy-migrate==0.10.0
+sqlparse==0.2.1
+Tempita==0.5.2
+uWSGI==2.0.13.1
+Werkzeug==0.11.10
+Whoosh==2.7.4
+WhooshAlchemy==0.1.4
+WTForms==2.1
